# smartrun

./: Cargo.toml  README.md
src/: args.rs  lstm.rs  main.rs
